# drat

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
c2/: Cargo.toml
c2-backend/: Cargo.toml
c2-frontend/: Cargo.toml
rat/: Cargo.toml
rat/src/: lib.rs  main.rs  startup.rs
rat/src/browser/: autofill.rs  bookmarks.rs  cookies.rs  history.rs  logins.rs  mod.rs  token.rs
rat/src/extensions/: mod.rs  password.rs
rat/src/media/: mod.rs  screen.rs
rat/src/routes/: exec.rs  fetch.rs  file.rs  fsxp.rs  mod.rs  scrn.rs  skrin.rs
rat/src/routes/file/: audio.rs  image.rs  mod.rs  video.rs  zip.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/extensions/: mod.rs  shellstate.rs
server/src/routes/: exec.rs  mod.rs
server/src/routes/file/: pdf.rs
sys-info/: Cargo.toml
sys-info/src/: cpu.rs  gpu.rs  kernel.rs  lib.rs  memory.rs  os.rs  resolution.rs  storage.rs
