[workspace]
resolver = "3"
members = [ "c2-backend", "c2-frontend", "rat" ]
exclude = []
default-members = [ "rat" ]

[workspace.package]
name = "drat"
version = "0.1.0"
edition = "2024"
authors = ["Sumit Modak <sumit.modak.code@gmail.com>"]
repository = "https://github.com/sumit-ftr/drat"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[workspace.lints]

[workspace.metadata]
