[package]
name = "rat"
version = "0.1.0"
edition = "2021"
authors = ["Sumit Modak <sumit.modak.code@gmail.com>"]
description = "API for remotely accessing user data"
licence = "MIT"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
xcap = "0.0.12"
