[package]
name = "rat"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "API for remotely accessing user data"
license.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde.workspace = true
serde_json = "1.0.125"
tokio.workspace = true
tokio-util = { version = "0.7.11", features = ["io"] }
reqwest = "0.12.7"
xcap = "0.0.14"
sysinfo = "0.31.4"
rusqlite = "0.32.1"
