[package]
name = "rat"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "API for remotely accessing user data"
license.workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde.workspace = true
serde_json = "1.0.140"
tokio.workspace = true
reqwest = "0.12.22"
xcap = "0.6.2"
sysinfo = "0.36.0"
tokio-util = { version = "0.7.15", features = ["io"] }
rusqlite = "0.37.0"
