[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Sumit Modak <sumit.modak.code@gmail.com>"]

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
